inclusion funcionalidades js,animaciones css, producto terminado

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500&display=swap');
+
+:root{
+    --color1: #2fd2ff; 
+    --color2: #000000;
+    --color3: #FFFFFF;
+   
+
+}
+*{
+  
+    font-family: 'Montserrat', sans-serif;
+}
+/* Navbar */
+
 #svg{
     height: 1.5rem;
     margin: 5px;
 }
 
 .nav-colored { 
-    background-color:#2fd2ff; 
+    background-color : var(--color1); 
 }
 .nav-transparent {
      background-color: rgb(0, 0, 0, 0);
 }
+
+/* Main body */
+
+body{
+    background-color: var(--color2);
+    color: var(--color3);
+}
+.icon-qs{
+    color: var(--color3);
+    background-color: var(--color1);
+    font-size: 1.5rem;
+}
+
+.icon-qs:hover{
+    color: var(--color1);
+    background-color: var(--color3);
+    border: var(--color1) solid 1px;
+}
+
+.colorcard:hover{
+    background-color: var(--color2);
+    color: var(--color1);
+    transition: 1s;
+}
+
+.card-img-top{
+    height: 15rem;
+    object-fit: cover;
+}
+.colorcard{
+    background-color: var(--color1);
+    color: var(--color3);
+}
+/*Contacto */
+.btn{
+    background-color: var(--color1);
+    color: var(--color3);
+}
+
+.btn:hover{
+    background-color: var(--color2);
+    color: var(--color1);
+    border: #2fd2ff solid 1px;
+}
+/* Footer */
+
+#footer{
+    background-color: var(--color1);
+    color: var(--color3);
+}
+
+#footer i{
+    color: var(--color3);
+    font-size: 2rem;
+    padding:0 0.5rem;
+    
+}
+
